--- a/my_solo_pr/src/css/header.css
+++ b/my_solo_pr/src/css/header.css
@@ -3,10 +3,12 @@
   margin: 0;
   padding: 0;
 }
-
-.headerWrap {
+.Header {
   position: fixed;
+  top: 0;
   width: 100%;
+  z-index: 1;
+  background-color: white;
 }
 
 .headerContainer {
@@ -34,6 +36,7 @@
   flex-grow: 1;
   z-index: 91;
   position: relative;
+  cursor: pointer;
 }
 .headerContainer li img {
   margin-bottom: -4px;
